--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,14 +3,18 @@
 {% block content %}
 <h1>Contact Me</h1>
 <form action="/send_email" method="POST">
+    {{ form.hidden_tag() }}
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
+    {{ form.name(size=40) }}
+    <br>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+    {{ form.email(size=40) }}
+    <br>
 
     <label for="message">Message:</label>
-    <textarea id="message" name="message" required></textarea>
+    {{ form.message(rows=4, cols=40) }}
+    <br>
 
     <button type="submit">Send</button>
 </form>
