--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,20 +4,33 @@
 <h1>Contact Me</h1>
 <form action="/send_email" method="POST">
     {{ form.hidden_tag() }}
+
     <label for="name">Name:</label>
     {{ form.name(size=40) }}
+    {% for error in form.name.errors %}
+        <div class="error">{{ error }}</div>
+    {% endfor %}
     <br>
 
     <label for="email">Email:</label>
     {{ form.email(size=40) }}
+    {% for error in form.email.errors %}
+        <div class="error">{{ error }}</div>
+    {% endfor %}
     <br>
 
     <label for="message">Message:</label>
     {{ form.message(rows=4, cols=40) }}
+    {% for error in form.message.errors %}
+        <div class="error">{{ error }}</div>
+    {% endfor %}
     <br>
 
     <label for="recaptcha">Verification:</label>
     {{ form.recaptcha() }}
+    {% for error in form.recaptcha.errors %}
+        <div class="error">{{ error }}</div>
+    {% endfor %}
     <br>
 
     <button type="submit">Send</button>
