filling in pages + date fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,4 +3,16 @@
 {% block content %}
 <h1>About</h1>
 <p>Template website</p>
+
+<div class="flex-container">
+    <div class="box">
+        <h2>Our Mission</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="box">
+        <h2>Social media</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+</div>
+
 {% endblock %}
