--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>&copy; 2024 website</p>
+        <p>&copy; {{ year }} flask website</p>
     </footer>
 </body>
 </html>
