--- a/templates/index.html
+++ b/templates/index.html
@@ -3,4 +3,16 @@
 {% block content %}
 <h1>Template websites</h1>
 <p>This is the homepage of my personal flask learning site, built with flask.</p>
+
+<div class="flex-container">
+    <div class="box">
+        <h2>Featured Content</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="box">
+        <h2>News</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+</div>
+
 {% endblock %}
