--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,4 +35,15 @@
 
     <button type="submit">Send</button>
 </form>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class="flash-messages">
+            {% for message in messages %}
+                <li class="success">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+
 {% endblock %}
